# jepa-btc-forecasting

./: .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  README.md  diag_lake.py  jepa_btc_forecasting_spec.md  probe_lake.py  pyproject.toml  sample_explore.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.yml
bars/: __init__.py  clock.py  cost.py  events.py  features.py  modes.py  produce.py  snapshot.py
data/: __init__.py  cv.py  labels.py  uniqueness.py  usable_calendar.json
docs/: agent-workflow.md  data.md  experiment-plan.md  feature-manifest.md  g0-evaluator.md  literature-review.md  native-recon.md  spec-revisions.md
docs/superpowers/plans/: 2026-06-22-lightgbm-baseline.md  2026-06-22-recon-replay-equivalence.md  2026-07-01-native-recon-engine.md  2026-07-02-binance-downloader-plan.md  2026-07-02-coinapi-within-timestamp-ordering.md  2026-07-02-lightgbm-manifest-integration.md  2026-07-02-partial-day-fill-policy.md  2026-07-02-trade-validation-breadth-plan.md  2026-07-03-bar-label-producer.md  2026-07-03-coinbase-backfill-manifest-review.md  2026-07-10-staged-signal-acquisition.md
docs/superpowers/specs/: 2026-07-03-coinbase-backfill-manifest-review-design.md  2026-07-13-g0bn-protocol.md
eval/: __init__.py  baseline.py  consumption.py  cost.py  freeze.py  g0.py  g0bn_config.py  g0bn_engine.py  g0bn_freeze.py  g0bn_identity.py  g0bn_ledger.py  g0bn_selection.py  guard.py  hashing.py  holdout.py  ledger.py  manifest.py  matrix.py  partition.py  runner.py  stats.py  study.py  synthetic.py  tau.py  writer.py
experiments/: README.md  __init__.py  binance_source_gate.py  preregistration_54.json  preregistration_64.json  snapshot_seed.py
experiments/evidence_54/: index_54.json  reconciliation_54.json  snapshot_seed_2024-12-04_arms.csv  snapshot_seed_2025-06-01_arms.csv  snapshot_seed_2025-06-01_leading_gap_arms.csv  snapshot_seed_2025-06-01_sparse_arms.csv  snapshot_seed_2026-04-01_arms.csv
experiments/evidence_64/: chd_probe_2026-04-01_12.json  index_64.json  lake_verdict_2026-04-01.json  stage2_cross_engine_determinism.json
ingest/: README.md  _common.py  coinapi_backfill.py  coinapi_flatfiles.py  coinapi_rest.py  download_coinapi.py  download_lake_binance.py  explore_stitch.py  g0bn_acquisition_preflight.py  lake_binance.py  trade_checks.py  validate_trade_feeds.py  verify_lake.py  verify_lake2.py  verify_trades_and_calendar.py
native/recon_native/: Cargo.toml  pyproject.toml
native/recon_native/src/: lib.rs
recon/: __init__.py  coinapi.py  events.py  ingest.py  live.py  merge.py  native.py  orderbook.py  parity.py  reconstruct.py  reseed.py  stitch_policy.py  synthetic.py
scripts/: bench_recon_engine.py  new_claude_worktree.sh  new_integration_branch.sh  plan_coinbase_quality_map_batches.py  plan_lake_binance_batches.py  reconcile_snapshot_seed_54.py  request_codex_deep_review.sh  review_coinbase_backfill_manifest.py  run_baseline.py  run_binance_recon.py  run_binance_source_gate.py  run_coinbase_parity.py  run_coinbase_quality_map.py  run_coinbase_quality_map_batches.py  run_g0.py  run_snapshot_seed_experiment.py  setup_github_labels.sh  verify_book_delta_v2.py
tests/: coinapi_backfill_fixtures.py  conftest.py  g0bn_dev_fixtures.py  g0bn_fixtures.py  g0bn_holdout_fixtures.py  g0bn_protocol_fixtures.py  produce_fixtures.py  test_bars_clock.py  test_bars_cost.py  test_bars_events.py  test_bars_features.py  test_bars_modes.py  test_bars_schedule.py  test_bars_snapshot.py  test_baseline.py  test_baseline_integration.py  test_binance_recon_conformance.py  test_binance_source_gate.py  test_coinapi_backfill_exec.py  test_coinapi_backfill_plan.py  test_coinapi_replay.py  test_coinapi_within_timestamp_ordering.py  test_coinbase_parity_integration.py  test_cost.py  test_cv.py  test_download_gate.py  test_download_lake_binance.py  test_download_lake_binance_pure.py  test_events.py  test_fixture_integration.py  test_g0_cli.py  test_g0_freeze.py  test_g0_holdout.py  test_g0_ledger.py  test_g0_partition.py  test_g0bn_acquisition_preflight.py  test_g0bn_bindings.py  test_g0bn_config.py  test_g0bn_engine.py  test_g0bn_freeze.py  (+48 more)
