[project]
name = "jepa-btc"
version = "0.0.1"
requires-python = ">=3.12"
# Runtime deps of the importable `recon` package: recon.ingest/reconstruct/live import
# pandas; recon.reconstruct/coinapi/parity also import numpy directly (np.lexsort/where for
# the array-path reconstruction and parity stats). numpy ships with pandas, but it is now a
# DIRECT import so we pin it explicitly. pyarrow (parquet engine) and pytest stay dev/test-only
# (pyarrow is used by scripts/run_coinbase_parity.py, not by the recon package itself).
dependencies = ["pandas", "numpy"]

[project.optional-dependencies]
# Phase-1 baseline evaluator: eval/ imports scikit-learn + lightgbm at import time, and the
# CLI (scripts/run_baseline.py) reads the ModelMatrix parquet (needs a pyarrow engine). Kept
# as an extra so a plain `recon` install stays light; install with `pip install -e .[baseline]`.
baseline = ["scikit-learn", "lightgbm", "pyarrow"]
# Stage-1 Binance Crypto Lake downloader (ingest/download_lake_binance.py): the vendor-facing CLI
# streams partitions via pyarrow over an S3FileSystem and lists/loads via lakeapi + an explicit
# boto3 session. Kept as an extra so a plain `recon` install stays light (the pure helpers in
# ingest/lake_binance.py need none of these); install with `pip install -e .[lake]`.
lake = ["pyarrow", "lakeapi", "boto3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
# Ship the Phase-1 baseline packages too, so a non-editable `pip install .[baseline]` can
# import eval.*/data.* (not just runs from the repo root), plus the bar producer (bars/).
include = ["recon*", "eval*", "data*", "bars*"]
